fix: 🐛 vertical layout shift

--- a/addons/rose/addon/styles/rose/components/form/_radio.scss
+++ b/addons/rose/addon/styles/rose/components/form/_radio.scss
@@ -37,17 +37,16 @@ $data-svg-prefix: 'data:image/svg+xml;utf-8,';
   .rose-form-radio-label {
     display: flex;
     align-items: center;
-
     .rose-form-helper-text {
       font-weight: normal;
       margin-left: sizing.rems(xxs);
-      line-height: typography.line-height(button);
       margin-bottom: 0;
     }
 
     @include type.type(s, semibold);
     color: currentColor;
     padding-left: sizing.rems(l);
+    padding-top: sizing.rems(xxxs);
 
     .rose-icon {
       margin-right: sizing.rems(xxs);
